--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.7.5",
     "cra-template": "1.2.0",
     "dompurify": "^3.2.3",
     "i18next": "^24.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-i18next": "^15.4.0",
     "react-scripts": "5.0.1"
   },
