--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "private": true,
   "dependencies": {
     "@react-spring/parallax": "^9.7.5",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "cra-template": "1.2.0",
     "dompurify": "^3.2.3",
     "i18next": "^24.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^15.4.0",
-    "react-scripts": "5.0.1"
+    "react-parallax": "^3.5.1",
+    "react-scripts": "5.0.1",
+    "react-spring": "^9.7.5",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
