--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thespygod.github.io/Detailing",
+  "homepage": "https://autodetailing.expert",
   "name": "detailing",
   "version": "0.1.0",
   "private": true,
